# phoenix-apple-components

./: .gitignore  CMakeLists.txt  MetalPhoenixRenderer-version.cmake  MetalPhoenixRendererConfig.cmake  MetalPhoenixRendererConfig.cmake.in  README.md
PHXMetal/: PHXMetal.metal  PHXShaders.h  Shaders.h
PhoenixTestingApp/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.mm  main.m
PhoenixTestingApp/Base.lproj/: Main.storyboard
Tests/: Tests.m  Tests.mm
UITests/: UITests.m  UITests.mm
include/: Renderer.hpp  Renderer_impl.hxx
phoenix-apple-components.xcodeproj/: project.pbxproj
phoenix-apple-components.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
phoenix-apple-components.xcodeproj/project.xcworkspace/xcuserdata/bodie.xcuserdatad/: UserInterfaceState.xcuserstate
phoenix-apple-components.xcodeproj/xcshareddata/xcschemes/: PHXRenderer.xcscheme  PhoenixTestingApp.xcscheme  Tests.xcscheme  UITests.xcscheme
phoenix-apple-components.xcodeproj/xcuserdata/bodie.xcuserdatad/xcschemes/: xcschememanagement.plist
src/PHXRenderer/: PHXRenderer.hpp  PHXRenderer.mm
src/PHXRenderer/ResourceManager/: PHXDrawer.hpp  PHXDrawer.mm  PHXResourceManager.hpp  PHXResourceManager.mm
src/Renderer/: Renderer.hpp  Renderer.mm  ResourceManager.hpp  ResourceManager.mm
src/Renderer/ResourceManager/: Drawer.hpp  Drawer.mm  ResourceManager.hpp  ResourceManager.mm
